# speek

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: docs.yml  publish.yml
docs/: changelog.md  conf.py  debug-nojob-halt.md  index.md  installation.md
docs/_static/: custom.css
docs/guides/: architecture.md  index.md  job-logs.md  priority.md  themes.md
docs/quickstart/: index.md  speek-max.md  speek-min.md  speek.md
speek/: check_slurm_resource.py  check_slurm_resource_light.py  foot.py  parsers.py  priority.py  slurm_info.py  slurm_predictor.py  speek_classic.py  speek_min.py  test_update.py  update.py
speek/data/: event_watcher.py  slurm_cache.py
speek/speek_max/: __main__.py  _utils.py  app.py  color_schemes.py  event_watcher.py  jump_overlay.py  jumper.py  log_scan.py  probe.py  slurm.py  speek_max.scss  themes.py
speek/speek_max/widgets/: center_middle.py  cluster_bar.py  command_bar.py  config_widget.py  confirmation.py  datatable.py  foldable_table.py  help_widget.py  history_widget.py  input.py  job_detail.py  job_info_modal.py  log_modal.py  logs_widget.py  modal_base.py  my_jobs_widget.py  node_widget.py  panel_divider.py  ping_tracker.py  priority_widget.py  queue_widget.py  quick_submit.py  rich_log.py  select.py  settings_widget.py  stats_widget.py  submit_widget.py  sysinfo_widget.py  tabbed_content.py  users_widget.py
tests/: test_check_slurm_resource.py  test_stats_vs_squeue.py
