[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["speek", "speek.data", "speek.speek_max", "speek.speek_max.widgets"]

[project]
name = "speek"
version = "0.0.3"
description = "Peek into slurm's resource info such as GPU avaiability, usage per user, job status, and more."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["slurm"]
authors = [
  {name = "Dongyeop Lee", email = "dylee23@postech.ac.kr"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pandas>=2.0.3",
    'rich',
    'textual>=0.50.0',
]

[project.scripts]
speek     = "speek.speek_classic:main"
speek-min = "speek.speek_min:main"
speek-max = "speek.speek_max.app:main"

[project.urls]
Repository = "https://github.com/edong6768/speek.git"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme",
    "myst-parser",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-design",
]
