[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["speek", "speek.data", "speek.speek_max", "speek.speek_max.widgets"]

[tool.setuptools.package-data]
"speek.speek_max" = ["*.scss", "*.css"]

[project]
name = "speek"
version = "0.0.3.dev1"
description = "Peek into slurm's resource info such as GPU avaiability, usage per user, job status, and more."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["slurm"]
authors = [
  {name = "Dongyeop Lee", email = "dylee23@postech.ac.kr"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pandas>=2.0.3",
    'rich',
    'textual>=0.50.0',
]

[project.scripts]
"speek0"  = "speek.speek_classic:main"
"speek-"  = "speek.speek_min:main"
"speek+"  = "speek.speek_max.app:main"

[project.urls]
Repository = "https://github.com/edong6768/speek.git"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle (Google style)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["speek"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.15.6",
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme",
    "myst-parser",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-design",
]
